--- a/src/app/components/image/image.component.css
+++ b/src/app/components/image/image.component.css
@@ -8,7 +8,7 @@ section::after {
 }
 div {
     margin: 2px;
-    background-color: violet;
+    background-color: white;
     position: relative;
  }
 i{
