--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-image [imgs]="imgs"></app-image>
+<app-image [imgs]="imgs" (ClickImage)="select($event)" ></app-image>
 
